Bug #26817: mysqldump fails to backup database containing view with invalid definer

manual merge 5.0->5.1